--- a/package.json
+++ b/package.json
@@ -47,5 +47,5 @@
   "devDependencies": {
     "gh-pages": "^2.2.0"
   },
-  "homepage": "http://ragmha.github.io/choco-bar-client"
+  "homepage": "https://ragmha.github.io/choco-bar-client/"
 }
